@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=F:/backs/GitHub/ae_apps_library/library/AeAppsLibrary
+android.library.reference.1=../../../ae_apps_library/library/AeAppsLibrary
